--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@ p {
 					</div>
 				</div>
 			</div>
-      <div class="item features-image col-12 col-md-6 col-lg-3 active">
+    <div class="item features-image col-12 col-md-6 col-lg-3 active">
 				<div class="item-wrapper">
 					<div class="item-img">
-						<img src="https://everydaysidehustles.com/cdn/shop/files/5.png?v=1690412993&width=500" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
+						<img src="https://everydaysidehustles.com/cdn/shop/files/Untitled_design-35.png?v=1690309930&width=300" alt="Mobirise Website Builder" data-slide-to="0" data-bs-slide-to="0">
 					</div>
 					<div class="item-content">
 						<h5 class="item-title mbr-fonts-style display-4">
-							<strong>AutoDS Supplier</strong>
+							<strong>Canva</strong>
 						</h5>
-              <P>Dropshipping supplier with 7-14 day shipping</P>
+              <P>Design tool</P>
 						
 						
-						<div class="mbr-section-btn item-footer"><a href="https://platform.autods.com/register?ref=MTUxMTE5MA==" class=" item-btn btn-primary-outline display-4">TRY AUTODS </a></div>
+						<div class="mbr-section-btn item-footer"><a href="https://www.canva.com/join/ypw-ggt-hcq" class=" item-btn btn-primary-outline display-4">TRY CANVA </a></div>
 					</div>
 				</div>
 			</div>
