--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ p {
               <P>Winning product</P>
 						
 						
-						<div class="mbr-section-btn item-footer"><a href="https://www.canva.com/join/ypw-ggt-hcq" class=" item-btn btn-primary-outline display-4">TRY SELL THE TREND</a></div>
+						<div class="mbr-section-btn item-footer"><a href="https://www.SellTheTrend.com/join/abdellahmohamm" class=" item-btn btn-primary-outline display-4">TRY SELL THE TREND</a></div>
 					</div>
 				</div>
 			</div>
